2009-07-06  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (capplet_util_object_notify_cb):
	* capplet/capplet-utils.h: Update for tree store.
	* capplet/nwam_location_dialog.c
	(nwam_location_connection_enabled_toggled_cb), (on_button_clicked),
	(tree_model_foreach_find_enabled_env): Removed manual row changed
	call since it has used capplet_util_object_notify_cb.
	* capplet/nwam_vpn_pref_dialog.c
	(capplet_tree_model_row_changed_func), (nwam_compose_tree_view),
	(refresh), (nwam_vpn_selection_changed), (on_nwam_enm_notify_cb):
	Update gui widgets once enm changes.
	* common/nwamui_enm.c (nwamui_enm_set_active): Add notify for active.

2009-07-06  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_vpn_pref_dialog.c (nwam_compose_tree_view),
	(vpn_pref_clicked_cb), (enm_name_cell_edited):
	* common/nwamui_enm.c (nwamui_enm_class_init),
	(nwamui_enm_destroy): Fixed doo:9847. And update start/stop rules label
	after enm name changes.

2009-07-03  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_wireless_chooser.c (nwam_compose_wifi_chooser_view),
	(nwam_wireless_chooser_init), (nwam_wifi_scan_start): Fixed runtime
	critical warnings and dup wlan items.
	* common/nwamui_daemon.h:
	* common/nwamui_daemon.c (nwamui_daemon_class_init),
	(nwamui_daemon_set_property), (find_compare_wifi_net_with_name),
	(dispatch_scan_results_if_wireless): Remove daemon status signal, uses
	status notify instead.
	* common/nwamui_ncp.c (nwamui_ncp_new_with_handle):
	* common/nwamui_ncu.c (populate_ip_ncu_data),
	(nwamui_ncu_wifi_hash_insert_or_update_from_handle):
	* common/nwamui_wifi_net.c (nwamui_wifi_net_update_with_handle):
	Fixed some mem leak.
	* daemon/status_icon.c (daemon_status_changed),
	(nwam_menu_scan_started), (daemon_active_ncp_changed),
	(daemon_active_env_changed), (connect_nwam_object_signals),
	(nwam_status_icon_run), (status_icon_popup),
	(activate_test_menuitems), (enable_sync_wifi_signals_func),
	(nwam_menu_enable_sync_wifi_signals_timer): Delay sync wifi menuitems